--- a/views/test.html
+++ b/views/test.html
@@ -12,17 +12,19 @@
 </br>
 <lable>actAddress</lable><input id="actAddress" name="actAddress" value="信雅达" type="text"/>
 </br>
+<lable>actCity</lable><input id="actCity" name="actCity" value="杭州" type="text"/>
+</br>
 <lable>actLongitude</lable><input id="actLongitude" name="actLongitude" value="37.422006" type="text"/>
 </br>
-<lable>actLatitude</lable><input id="actLatitude" name="actLatitude" value="-122/084095" type="text"/>
+<lable>actLatitude</lable><input id="actLatitude" name="actLatitude" value="-122.084095" type="text"/>
 </br>
 <lable>actLimitNum</lable><input id="actLimitNum" name="actLimitNum" value="10" type="text"/>
 </br>
-<lable>actStart</lable><input id="actStart" name="actStart" value="Sun, 18 Nov 2012 06:49:29 GMT " type="text"/>
+<lable>actStart</lable><input id="actStart" name="actStart" value="Tue, 4 Dec 2012 06:49:29 GMT " type="text"/>
 </br>
-<lable>actEnd</lable><input id="actEnd" name="actEnd" value="Sun, 18 Nov 2012 08:49:29 GMT " type="text"/>
+<lable>actEnd</lable><input id="actEnd" name="actEnd" value="Tue, 4 Dec 2012 08:49:29 GMT " type="text"/>
 </br>
-<lable>acUid</lable><input id="acUid" name="acUid" value="youah12jsadr" type="text"/>
+<lable>acUid</lable><input id="acUid" name="acUid" value="you" type="text"/>
 </br>
 <input type="submit" value="submit"/>
 </form>
