--- a/views/test.html
+++ b/views/test.html
@@ -145,8 +145,8 @@
 
 
                 </br></br>
-    更新用户WB135357536961806705的联系方式 （这个用户ID要根据下面的注册的ID而确定）
-          <form action = '/WB135357536961806705/updateInfo' method = 'post'>
+    更新用户WB135365827132692317的联系方式 （这个用户ID要根据下面的注册的ID而确定）
+          <form action = '/QQ135506094204296731/updateInfo' method = 'post'>
             qq
             <input type = 'text' name = 'qq' id = 'qq' value = '8212121212' >
           </br>
@@ -156,6 +156,9 @@
       phone
             <input type = 'text' name = 'phone' id = 'phone' value = '12345678901'  >
       </br>
+       nickname
+            <input type = 'text' name = 'nickname' id = 'nickname' value = 'gumpgggg'  >
+      </br>
         <input type = 'submit' >
       </form>
 
@@ -164,6 +167,18 @@
     活动详情
           <form action = '/getActivityByActId' method = 'get'>
             <input type = 'text' name = 'actId' id = 'actId' value = 'ACT135522970189835980' >
+      </br>
+        <input type = 'submit' >
+      </form>
+
+
+                </br></br>
+
+
+
+    全部活动
+          <form action = '/getAllActivities' method = 'get'>
+            <input type = 'text' name = 'actCity' id = 'actCity' value = '杭州' >
       </br>
         <input type = 'submit' >
       </form>
